syntax = "proto3";
package virtengine.bme.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

import "virtengine/bme/v1/types.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/bme/v1";

// EventCircuitBreakerStatusChange is emitted when circuit breaker status changes
message EventMintStatusChange {
  // previous_status is the previous status
  MintStatus previous_status = 1;

  // new_status is the new status
  MintStatus new_status = 2;

  // collateral_ratio is the CR that triggered the change
  string collateral_ratio = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

// EventVaultSeeded is emitted when the vault is seeded with AKT
message EventVaultSeeded {
  // amount is the AKT amount added to vault
  cosmos.base.v1beta1.Coin amount = 1 [
    (gogoproto.nullable) = false
  ];

  // source is where the funds came from
  string source = 2;

  // new_vault_balance is the new vault balance
  cosmos.base.v1beta1.Coin new_vault_balance = 3 [
    (gogoproto.nullable) = false
  ];
}

// EventLedgerRecordExecuted emitted information of burn/mint event of token A burn to mint token B
message EventLedgerRecordExecuted {
  // burned_from source address of the tokens burned
  LedgerRecordID id = 1 [
    (gogoproto.nullable)  = false,
    (gogoproto.customname) = "ID",
    (gogoproto.jsontag)   = "id",
    (gogoproto.moretags)  = "yaml:\"burneidd_from\""
  ];
}
